<resources>
    <string name="app_name">FinalProjectAndroid</string>
    <string name="calculate_burn_button">Wylicz spalanie</string>
    <string name="historyRefuelingButton">Historia tankowań</string>
    <string name="current_costs_in_month">Bierzący miesiąc</string>
    <string name="amount_of_fuel_refueled">Ilość paliwa w litrach</string>
    <string name="sum1">0</string>
    <string name="litre"> l </string>
    <string name="amount_kilometers">Ilość kilometrów</string>
    <string name="kilometers">km</string>
    <string name="spend_money">Wydane pieniądze</string>
    <string name="currency">zł</string>
    <string name="see_more">Zobacz więcej</string>
    <string name="add_fuel">Dodaj tankowanie</string>
    <string name="enter_amount_fuel">Wprowadź ilość paliwa</string>
    <string name="enter_kilometers_value">Wprowadź ilość kilometrów</string>
    <string name="set_date">Ustaw Date</string>
    <string name="ButtonAkceptForm">Dodaj do  bazy</string>
    <string name="actionbutton">ActionButton</string>
    <string name="form" translatable="false">Formularz</string>
    <string name="enter_cost_fuel">Wprowadź koszt paliwa</string>
    <string name="a">kij wie</string>
    <string name="title_activity_calculate_consumption_fuel">CalculateConsumptionFuelActivity</string>
    <string name="tab_text_1">Symulacja kosztów</string>
    <string name="tab_text_2">Symulacja spalania</string>
    <string name="tab_text_3">Symulacja zasięgu</string>
    <string name="information_on_consumption">Brak informacji na temat spalania</string>
    <string name="enterAverageFuelConsumption">Podaj średnie spalanie:</string>
    <string name="enterKilometers_distance">Liczba km do pokonania:</string>
    <string name="litrePriceFuel">Cena za litr paliwa:</string>
    <string name="admountPeople">Liczba osób:</string>
    <string name="Calculate">Oblicz</string>
    <string name="costTravel">Brak informacji o kosztach podróży:</string>
    <string name="costPerPerson">Brak przeliczeniu kosztu na osobę</string>
    <string name="addRowResult">Pomyślnie dodano wiersz</string>
    <string name="emptyTextView" />
    <string name="inputValueFuelIs">Wprowadzona ilosc paliwa to: </string>
    <string name="inputValueKilometersIs">Wprowadzona ilość kilometrów to: </string>
    <string name="inputCostFuelIs">Wrpwadzony koszt paliwa to: </string>
    <string name="youMustEnterFieldsValue">Musisz uzupełnić wszystkie pola</string>

</resources>