<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="320dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            >


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/purple_700">

                <TextView
                    android:id="@+id/apiaryName"
                    android:layout_width="382dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="19dp"
                    android:layout_marginEnd="30dp"
                    android:text="@string/current_costs_in_month"
                    android:textAlignment="textStart"
                    android:textColor="#FFFF"
                    android:textSize="24sp" />

            </RelativeLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">



                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="221dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="15dp"
                        android:layout_marginBottom="0dp"
                        android:gravity="center_vertical"
                        android:text="@string/amount_of_fuel_refueled"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView

                        android:id="@+id/textView6"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="14dp"
                        android:layout_toStartOf="@+id/currencyID"
                        android:layout_toEndOf="@+id/textView5"
                        android:text="@string/sum1"
                        android:textAlignment="textEnd"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/currencyID"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="28dp"
                        android:layout_marginEnd="21dp"
                        android:text="@string/litre"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="221dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="15dp"
                        android:layout_centerVertical="true"
                        android:gravity="center_vertical"
                        android:text="@string/amount_kilometers"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="17dp"
                        android:layout_toStartOf="@+id/currencyID2"
                        android:layout_toEndOf="@+id/textView4"
                        android:text="@string/sum1"
                        android:textAlignment="textEnd"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/currencyID2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"

                        android:layout_marginTop="28dp"
                        android:layout_marginEnd="15dp"
                        android:text="@string/kilometers"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="16sp" />


                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="221dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="15dp"
                        android:gravity="center_vertical"
                        android:text="@string/spend_money"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="20dp"
                        android:layout_toStartOf="@+id/currencyID3"
                        android:layout_toEndOf="@+id/textView3"
                        android:text="@string/sum1"
                        android:textAlignment="textEnd"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/currencyID3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="28dp"

                        android:layout_marginEnd="21dp"
                        android:text="@string/currency"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </RelativeLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/teal_200"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"/>

            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="76dp">


                <Button
                    android:id="@+id/seeMoreButton"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="22dp"
                    android:background="@color/white"
                    android:text="@string/see_more"
                    android:textColor="#9F6200EE"
                    android:textSize="14sp"
                    android:textStyle="italic"
                   />

            </RelativeLayout>


        </LinearLayout>



    </androidx.cardview.widget.CardView>





</LinearLayout>