<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_profit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="139dp"
        android:layout_marginEnd="16dp"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_amount_fuel"
            android:textColor="@color/colorAccent"
            android:imeOptions="actionDone"
            android:singleLine="true"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/value_profit"
        android:layout_width="381dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_profit"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="15dp"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_kilometers_value"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textColor="@color/colorAccent" />

    </com.google.android.material.textfield.TextInputLayout>



    <TextView
        android:id="@+id/date_profit"
        android:layout_width="249dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/value_profit"
        android:layout_alignParentStart="true"
        android:layout_marginStart="48dp"
        android:layout_marginTop="64dp"
        android:text="@string/set_date"
        android:textSize="20sp"
        app:errorEnabled="true" />



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingButtonProfit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="283dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_control_point_white_64dp"
        app:fabSize="normal"
        app:srcCompat="@color/colorAccentCustom" />

    <Button
        android:id="@+id/buttonConfirmProfit"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_below="@+id/date_profit"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="119dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/rounded_button_white"
        android:text="@string/ButtonAkceptForm" />

    <TextView
        android:id="@+id/placeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="29dp"
        android:text="@string/place_name"
        android:textSize="22sp" />

</RelativeLayout>